<resources>
    <string name="app_name">Estamp</string>
    <string name="Vendas">Vendas</string>
    <string name="Produtos">Produtos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="preco_do_produto">Preço do Produto</string>
    <string name="preco">Preço</string>
    <string name="salvar">Salvar</string>
    <string name="Quantidade">Quantidade</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome_cliente">Nome do Cliente</string>
    <string name="finalizar">Finalizar</string>

    <array name="spinerProduto">
        <item>Caneca de Porcelana</item>
        <item>Caneca de Aluminio</item>
    </array>
</resources>