<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.SalvarProdutoDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nome_produto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/nome_do_produto" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_preco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_preco_produto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/preco_do_produto" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_salvar_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/salvar"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_preco" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>