<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".dialog.SalvarVendaDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_quantidade_produto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spn_produtos"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_quantidade_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:background="@color/white"
                android:hint="@string/Quantidade"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spn_produtos"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:entries="@array/spinerProduto"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@+id/input_layout_quantidade_produto"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_layout_quantidade_produto" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_nome_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_quantidade_produto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nome_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/nome_cliente"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_preco_promocional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_nome_cliente">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_preco_promocional"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:background="@color/white"
                android:hint="@string/preco_promocional"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_salvar_venda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/salvar"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_preco_promocional" />

        <TextView
            android:id="@+id/btn_cancelar_venda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cancelar"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_salvar_venda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_preco_promocional" />

        <ImageView
            android:id="@+id/iv_button_hide_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:layout_constraintTop_toTopOf="@+id/btn_cancelar_venda"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancelar_venda"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancelar_venda"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>